assets/styles/index.scss
$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
@import '~bootstrap-sass/assets/stylesheets/bootstrap';
@import url('https://fonts.googleapis.com/css?family=Montserrat|Open+Sans');

body {
  font-family: 'Montserrat', sans-serif;
  font-weight: lighter;
}
h1 {
  display: inline;
  float: left;
}

.modal-button {
  float: right;
  margin-top: 2em;
  margin-right: 2em;
}

ul {
  list-style: none;
}
form h4 {
  color: #68b559;
  font-weight: bold;
}
input {
  border-style: none;
  border-bottom: solid #000 3px;
  margin-left: 2em;
  margin-right: 2em;
  width: 18em;
}
form {
  padding-bottom: 3em;
}
#navbar-toggle-cbox {
  display:none
}
#navbar-toggle-cbox:checked ~ .collapse {
    display: block;
}
/* The Modal (background) */
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}
input {
  background-color: #fefefe;
}

.modal-content {
    background-color: #fefefe;
    margin: 15% auto; /* 15% from the top and centered */
    padding: 20px;
    border: 1px solid #444;
    width: 80%; /* Could be more or less, depending on screen size */
    overflow: auto;
}

/* The Close Button */
.close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}
#sign-out {
  float: right;
}
.close:hover,
.close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

